@@ -1,3 +1,9 @@
+2008-01-13  Takeru INOUE  <takeru.inoue _ gmail.com>
+
+        * release 0.0.4:
+	* lib/Catalyst/Helper/Model/Estraier.pm
+	- fix POD
+
 2007-12-09  Takeru INOUE  <takeru.inoue _ gmail.com>
 
         * release 0.0.3:
